# calidad_software_practicas

./: .gitignore
PXB9/: .gitignore  CMakeLists.txt  P2.Doxyfile  P3.Doxyfile  README.md
PXB9/doc/html/: _c_make_c_compiler_id_8c.html  _laboratorio_8cpp.js  _laboratorio_8cpp__incl.map  _laboratorio_8cpp__incl.md5  _laboratorio_8h.js  _laboratorio_8h__dep__incl.map  _laboratorio_8h__incl.map  _lista_enlazada_8h.html  _lista_enlazada_8h__dep__incl.map  _lista_enlazada_8h__dep__incl.md5  _lista_enlazada_8h__incl.md5  _medi_express_8cpp__incl.map  _medi_express_8h.html  _medi_express_8h.js  _medi_express_8h__dep__incl.md5  _medi_express_8h__incl.md5  _medi_express_8h_source.html  _pa_medicamento_8h.html  _pa_medicamento_8h.js  _pa_medicamento_8h__dep__incl.md5  _pa_medicamento_8h__incl.md5  _pa_medicamento_8h_source.html  _r_e_a_d_m_e_8md.html  _v_dinamico_8h.html  _v_dinamico_8h__dep__incl.map  _v_dinamico_8h__incl.map  _v_dinamico_8h__incl.md5  annotated_dup.js  class_laboratorio.js  class_laboratorio_a203ae5fbf52d077614e3234456994b02_icgraph.map  class_laboratorio_a3ae1e03573efff0aeaa5e2e1ed978c47_icgraph.map  class_laboratorio_ac0a12c6a24ee87852a01fa37ef44eb62_cgraph.map  class_laboratorio_ac0a12c6a24ee87852a01fa37ef44eb62_cgraph.md5  class_laboratorio_ac70375c93c5763347712393450dc1a2b_icgraph.map  class_laboratorio_ac70375c93c5763347712393450dc1a2b_icgraph.md5  class_laboratorio_ad5c1923ca87f121b607f3cd2656eed12_cgraph.map  class_laboratorio_ad5c1923ca87f121b607f3cd2656eed12_cgraph.md5  class_laboratorio_afc6701374dd84642cbcfab819eb1ff3e_icgraph.md5  class_lista_enlazada-members.html  class_lista_enlazada.html  (+83 more)
PXB9/doc/html/search/: all_12.js  all_16.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_3.js  classes_4.js  defines_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_9.js  functions_e.js  functions_f.js  pages_3.js  (+1 more)
PXB9/include/: core_logic.h
PXB9/src/: VDinamico.tpp  core_logic.cpp  main.cpp
PXB9/tests/: test_main.cpp
practica1/practica2Listas/: .gitignore  CMakeLists.txt
practica1/practica2Listas/include/: Laboratorio.h  VDinamico.h
practica1/practica2Listas/src/: MediExpress.cpp
(+275 files in other folders)
